--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://MohamedReddam1.github.io/atlaswingsv2",
-  "name": "atlaswingsv2",
+  "homepage": "https://MohamedReddam1.github.io/AtlasWings",
+  "name": "atlaswings",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,10 +10,10 @@
     "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.2",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
-    "react-slick": "^0.30.2",
+    "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
